--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.14.5",
     "@astrojs/check": "^0.9.3",
+    "@astrojs/tailwind": "^5.1.0",
+    "@fontsource/courier-prime": "^5.0.21",
+    "@fontsource/roboto-mono": "^5.0.19",
+    "astro": "^4.14.5",
+    "lucide-astro": "^0.438.0",
+    "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
   }
 }
