--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.3",
-    "@astrojs/tailwind": "^5.1.0",
     "@fontsource/courier-prime": "^5.0.21",
     "@fontsource/roboto-mono": "^5.0.19",
+    "@lucide/astro": "^0.487.0",
+    "@tailwindcss/vite": "^4.1.0",
     "astro": "^4.14.5",
     "lucide-astro": "^0.438.0",
-    "tailwindcss": "^3.4.10",
+    "tailwindcss": "^4.1.0",
     "typescript": "^5.5.4"
   }
 }
